Header initial construction complete with some styling errors.

--- a/index.html
+++ b/index.html
@@ -11,9 +11,22 @@
 
 <body>
 
-    <header>
-        <img src="./assets/images/Portfolio Photo.jpg" alt="Picture of JD with headphones on"/>
-        
+    <header class="headerHighlight">
+        <img  src="./assets/images/Portfolio Photo.jpg" id="main"  alt="Picture of JD with headphones on"/>
+
+
+        <ul class="navigate-page">
+            <li>Home</li>
+            <li>About</li>
+            <li>Work</li>
+            <li>Contact Me</li>
+        </ul>
+
+        <ul class="social">
+
+            <a id="instagram" href="https://www.instagram.com/jddunk2929/">Instagram</a>
+
+        </ul>
     </header>
 
 </body>
