Finishing Touches on the layout and sizing

--- a/index.html
+++ b/index.html
@@ -24,22 +24,21 @@
             </ul>
         </nav>
 
-
+<div class="container">
 
         <img src="./assets/images/DarkBlueBackGround_JD3.png" alt="DarkBlueBackGround with JD in bottom lefthand corner"
             style="width:55vw; height: 400px;">
-
-
-
+           
+<h1>JD</h1>
+</div>
     </header>
     
         <h2>About Me</h2>
         <section id="about">
 
-
         <p>
             Being a Full Stack Developer is my second major career. I have spent the past 20 years as a Montessori
-            teacher. Most of my experience was working with gifted students who also had one or more learning
+            teacher. Most of my experience has been working with gifted students who also had one or more learning
             differences. This is a challenging career day to day and I knew it was time to retire and find a new
             passion. My teaching career honed my patience, creativity and ability to work with almost any personality
             type. These great transferable skills are helping me in my new endeavour. I have two grown sons who prefer
