Adding the Health-esteem webpage information.

--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
             <div class="row">
 
                 <card class="column">
-                    <h3>Project 2</h3>
+                    <h3> <a href="https://jd2929.github.io/Health_Esteem/">Health-eteem</h3>
                     <div class="innerCard">
                         <p class="workcard">description of project 2</p>
-                        <img src="./assets/images/PlaceHolderPhoto.jpg" / alt="Place Holder Blue Backgroung"
+                        <img src="./assets/images/ScreenShot of Health_Esteem.jpg" / alt="checkboxes on the left with chart on the right"
                             style="height: 30vh; width: 30vw;">
                     </div>
                 </card>
